--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,18 +15,18 @@ dependencies:
   cloud_firestore: ^4.3.1
   firebase_auth: ^4.2.5
   firebase_storage: ^11.0.10
-  google_sign_in: ^5.4.2
+  google_sign_in: ^6.1.5
   freezed_annotation: ^2.1.0
-  state_notifier: ^0.7.2+1
-  hooks_riverpod: ^1.0.4
+  state_notifier: ^1.0.0
+  hooks_riverpod: ^2.4.1
   intro_slider: ^4.0.0
   url_launcher: ^6.1.7
   cached_network_image: ^3.2.2
-  lottie: ^1.4.3
-  sign_in_with_apple: ^4.1.0
+  lottie: ^2.6.0
+  sign_in_with_apple: ^5.0.0
   bottom_navy_bar: ^6.0.0
   percent_indicator: ^4.2.2
-  material_segmented_control: ^4.0.0
+  material_segmented_control: ^5.0.0
   just_audio: ^0.9.30
   expandable: ^5.0.1
   bordered_text: ^2.0.0
@@ -42,7 +42,7 @@ dev_dependencies:
   build_runner: ^2.2.1
   json_serializable: ^6.4.0
   flutter_native_splash: ^2.2.7
-  flutter_launcher_icons: ^0.10.0
+  flutter_launcher_icons: ^0.13.1
 
 flutter_native_splash:
   image: "assets/images/sample_logo.png"
