--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -37,8 +37,8 @@
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
-	<key>NSUserTrackingUsageDescription</key>
-	<string>許可されると表示される広告が最適化されます。</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>クイズの正誤判定に使用します。</string>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
