--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -38,7 +38,9 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>クイズの正誤判定に使用します。</string>
+	<string>クイズの正誤判定に使用します</string>
+	<key>NSUserTrackingUsageDescription</key>
+	<string>「許可」すると最適化された広告が表示されます</string>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
