--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,10 @@ dependencies:
   bordered_text: ^2.0.0
   animated_text_kit: ^4.2.2
   app_tracking_transparency: ^2.0.3
+  mockito: ^5.4.2
+  json_annotation: ^4.8.1
+  fake_cloud_firestore: ^2.4.1+1
+  firebase_auth_mocks: ^0.12.0
 
 dev_dependencies:
   flutter_test:
@@ -43,6 +47,7 @@ dev_dependencies:
   json_serializable: ^6.4.0
   flutter_native_splash: ^2.2.7
   flutter_launcher_icons: ^0.13.1
+  mockito: ^5.4.2
 
 flutter_native_splash:
   image: "assets/images/sample_logo.png"
