--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   json_annotation: ^4.8.1
   fake_cloud_firestore: ^2.4.1+1
   firebase_auth_mocks: ^0.12.0
+  riverpod_annotation: ^2.3.0
 
 dev_dependencies:
   flutter_test:
@@ -48,6 +49,7 @@ dev_dependencies:
   flutter_native_splash: ^2.2.7
   flutter_launcher_icons: ^0.13.1
   mockito: ^5.4.2
+  riverpod_generator: ^2.3.5
 
 flutter_native_splash:
   image: "assets/images/sample_logo.png"
