--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   firebase_auth_mocks: ^0.12.0
   riverpod_annotation: ^2.3.0
   auto_size_text: ^3.0.0
+  go_router: ^12.1.3
+  collection: ^1.17.1
 
 dev_dependencies:
   flutter_test:
@@ -51,6 +53,7 @@ dev_dependencies:
   flutter_launcher_icons: ^0.13.1
   mockito: ^5.4.2
   riverpod_generator: ^2.3.5
+  go_router_builder: ^2.4.0
 
 flutter_native_splash:
   image: "assets/images/sample_logo.png"
